# my_codebase

./: .gitignore  README.md  notes.html  notes.txt
projects/basics_of_pybind11/: CMakeLists.txt  basic_export.cpp  test_it.py
projects/cpp_with_pybind11/02_class_and_struct/: CMakeLists.txt  class_and_struct.cpp  test_it.py
projects/cpp_with_pybind11/03_accessing_instance_and_static_data_members/: class_and_struct.cpp  read_me.txt  test_it.py
projects/cpp_with_pybind11/04_inheritance_and_automatic_downcasting/: CMakeLists.txt  inheritance_and_auto_downcasting.cpp  read_me.txt  test_it.py
projects/cpp_with_pybind11/05_overloaded_methods/: CMakeLists.txt  overloaded_methods.cpp  read_me.txt  test_it.py
projects/cpp_with_pybind11/06_smart_pointers/: CMakeLists.txt  read_me.txt  smart_pointers.cpp  test_it.py
projects/cpp_with_pybind11/basics_of_pybind11/: CMakeLists.txt  basic_export.cpp  read_me.txt  test_it.py
projects/hello-world/: CMakeLists.txt  Makefile  hello_world.cpp
projects/sample_code_with_race_condition/: CMakeLists.txt  build.sh  main.cpp  read_me.txt
projects/using_nlohmann_json_third_party_lib/: CMakeLists.txt  main.cpp
